src/objects/Billing_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Number of hours on this line item</description>
        <inlineHelpText>Number of hours on this line item</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice on which this line item appears</description>
        <inlineHelpText>Invoice on which this line item appears</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>RMA_Invoice__c</referenceTo>
        <relationshipLabel>Billing Line Items</relationshipLabel>
        <relationshipName>Billing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <description>Identifies whether or not the line item appears on an invoice</description>
        <inlineHelpText>Identifies whether or not the line item appears on an invoice</inlineHelpText>
        <label>Invoiced</label>
        <picklist>
            <picklistValues>
                <fullName>Not Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Item_Charge__c</fullName>
        <formula>Hours__c  *  Rate_per_Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes from timecard entry</description>
        <inlineHelpText>Notes from timecard entry</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project to which this line item is to be billed</description>
        <inlineHelpText>Project to which this line item is to be billed</inlineHelpText>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Billing Line Items</relationshipLabel>
        <relationshipName>Billing_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_per_Hour__c</fullName>
        <description>Hourly rate from timecard entry</description>
        <inlineHelpText>Hourly rate from timecard entry</inlineHelpText>
        <label>Rate per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <formula>Timecard__r.Resource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Timecard from which this line item was generated</description>
        <inlineHelpText>Timecard from which this line item was generated</inlineHelpText>
        <label>Timecard</label>
        <referenceTo>Appirio_PSAe__Timecard__c</referenceTo>
        <relationshipLabel>Billing Line Items</relationshipLabel>
        <relationshipName>Billing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Line Item</label>
    <nameField>
        <displayFormat>BLI-{00000}</displayFormat>
        <label>Billing Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>